# scikit-learn-course

./: 1_medical_expenses.ipynb  README.md  pyproject.toml
